docs/semantic-ontology/linkml/tests/invalid/isroot-not-boolean.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-isroot-string",
    "@type": "dcs:ContractTemplate",
    "dcs:documentStructure": {
        "@id": "did:web:localhost:template:test-isroot-string#document-structure",
        "@type": "dcs:DocumentStructure",
        "dcs:layout": [
            {
                "@id": "did:web:localhost:template:test-isroot-string#node-root",
                "@type": "dcs:LayoutNode",
                "dcs:children": { "@list": [] },
                "dcs:isRoot": "true"
            }
        ]
    }
}
